# crypt-io

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml
.dev/: DIRECTIVES.md  PROMPT.md  ROADMAP.md
.dev/release/: v0.1.0.md
.github/workflows/: ci.yml
benches/: aead.rs  crypt_bench.rs  hash.rs  kdf.rs  mac.rs  stream.rs
docs/: API.md  ARCHITECTURE.md  FILE_FORMAT.md  PERFORMANCE.md  PLATFORM-NOTES.md  SECURITY.md  STABILITY-1.0.md
docs/release/: v0.10.0.md  v0.11.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md  v1.0.0.md
examples/: aead_round_trip.rs  derive_subkeys.rs  encrypt_file.rs  mac_authenticate.rs  password_hash.rs  profile_alloc.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: aead_decrypt.rs  aead_encrypt.rs  argon2_parse.rs  hash_blake3.rs  hash_sha2.rs  hkdf.rs  mac.rs  stream_decrypt.rs
src/: error.rs  lib.rs
src/aead/: aes_gcm.rs  chacha20.rs  mod.rs
src/hash/: blake3_impl.rs  mod.rs  sha2_impl.rs
src/kdf/: argon2_impl.rs  hkdf_impl.rs  mod.rs
src/mac/: blake3_impl.rs  hmac_impl.rs  mod.rs
src/stream/: aead.rs  decryptor.rs  encryptor.rs  file.rs  frame.rs  mod.rs
tests/: into_apis.rs  smoke.rs  stream.rs
